--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -18,8 +18,16 @@
   along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <resources>
-    <style name="NoTitleBar" parent="android:Theme.Material"></style>
-    <style name="Dialog" parent="android:Theme.Material.Dialog"></style>
+    <style name="NoTitleBar" parent="android:Theme.Material.Light.NoActionBar">
+		<item name="android:colorPrimary">@color/primary</item>
+		<item name="android:colorPrimaryDark">@color/primary_dark</item>
+		<item name="android:colorAccent">@color/accent</item>
+		<item name="android:textColorPrimary">@color/primary_text</item>
+		<item name="android:textColorSecondary">@color/secondary_text</item>
+		<item name="android:divider">@color/divider</item>
+		<item name="android:icon">@color/icons</item>
+	</style>
+    <style name="Dialog" parent="android:Theme.Material.Light.Dialog"></style>
 	<style name="GroupTextSmall" parent="android:Theme.Material">
 		<item name="@android:textColor">@color/group</item>
 		<item name="@android:textSize">15sp</item>
